--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2017-12-24  Ajay Saini  <sainiak@uci.edu>
+
+	* Draft of Quarterly Technical Report
+
+2017-12-23  Ajay Saini  <sainiak@uci.edu>
+
+	* imau2nc.py: Work under progress, still haven't recieved complete data from author 
+
 2017-12-14  Ajay Saini  <sainiak@uci.edu>
 
 	* jaws.py: Combined program to convert GCNET and PROMICE
