--- a/ChangeLog
+++ b/ChangeLog
@@ -2,17 +2,48 @@
 
 	* Polished homepage
 
+2017-01-01  Ajay Saini  <sainiak@uci.edu>
+
+	* aaws2nc.py: Created new variable 'time' to calculate seconds since '1970-01-01'
+	* aaws2nc.py: Adjusted 'station_name' variables to accomodate stations having long names
+	* Added functionality to automatically count timesteps in the dataset
+	* Corrected the time calculation function in gcnet2nc.py
+
+2017-12-31  Ajay Saini  <sainiak@uci.edu>
+
+	* Added variable 'station_name' to aaws2nc and promice2nc
+	* Removed nrows argument
+	* Added functionality to automatically count timesteps in the dataset
+	* Corrected the time calculation function in gcnet2nc.py
+
+2017-12-30  Ajay Saini  <sainiak@uci.edu>
+
+	* Created master list of variables that need standard names
+	* gcnet2nc.py, promice2nc.py: Edited op_file to name it as ip_file.nc
+	* jaws.py: edited the parser function to take input accordingly
+
+2017-12-29  Ajay Saini  <sainiak@uci.edu>
+
+	* aaws2nc.py: astropy.io to write data properly in nc format
+	* Added sample one-day datasets of GCNET, PROMICE, AAWS
+	
+2017-12-26  Ajay Saini  <sainiak@uci.edu>
+
+	* Completed NASA SATERN learning assignment
+	* aaws: Collected data and created variables with their units and standard names
+
 2017-12-25  Ajay Saini  <sainiak@uci.edu>
 
-	* Networks have individual functions in their files with consistent names. jaws.py contains main function
-
+	* Restructured the source directory and created jaws.py as main function
+	* gcnet2nc.py and promice2nc.py scripts respectively for GCNET and PROMICE networks
+	
 2017-12-24  Ajay Saini  <sainiak@uci.edu>
 
 	* Draft of Quarterly Technical Report
 
 2017-12-23  Ajay Saini  <sainiak@uci.edu>
 
-	* imau2nc.py: Work under progress, still haven't recieved complete data from author
+	* imau2nc.py: Collected data and created variables with their units and standard_names
 
 2017-12-14  Ajay Saini  <sainiak@uci.edu>
 
