--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-01-05  Ajay Saini  <sainiak@uci.edu>
+
+	* Changed algotrithms for writing data to accomodate unlimited time dimension
+
+	* Functions to convert units to SI units (e.g. degC to kelvin)
+
+	* Edited the long mames
+
 2018-01-04  Ajay Saini  <sainiak@uci.edu>
 
 	* Added functionality to calculate date from current variables for GCNET.
