--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-18  Charlie Zender  <zender@uci.edu>
+
+	* Fix usage example on README.md
+
 2018-01-17  Ajay Saini  <sainiak@uci.edu>
 
 	* Added station_name variable for all datasets
