--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-19  Charlie Zender  <zender@uci.edu>
+
+	* Add copyright/license to README.md
+
 2018-01-18  Ajay Saini  <sainiak@uci.edu>
 
 	* GCNET: Added new temp variables to store quality control variables
