Add features to L3 value-added science list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-23  Charlie Zender  <zender@uci.edu>
+
+	* Add features to L3 value-added science list
+
 2018-01-22  Ajay Saini  <sainiak@uci.edu>
 
 	* Corrected calculation of hour in GCNET to accomodate different values after decimal in different files
