--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-02-05  Ajay Saini  <sainiak@uci.edu>
+
+	* GCNet - Used pandas to copy data from ascii file, runtime decreased by huge factor. Work in progress, need to implement for calculated variables.
+
+	* GCNet- Hour calculation condensed
+
+	* Completed 3 required courses of NASA training
+
 2018-02-02  Ajay Saini  <sainiak@uci.edu>
 
 	* Changed string matching to float in PROMICE and AAWS
