--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-02-07  Ajay Saini  <sainiak@uci.edu>
+
+	* Implemented xarray to write the data for AAWS
+
+	* Asked questions about derived variables calculation on SO
+
 2018-02-06  Ajay Saini  <sainiak@uci.edu>
 
 	* GCNet - Hour calculation made faster
