--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-02-13  Charlie Zender  <zender@uci.edu>
+
+	* Add pandas to dependency list
+
 2018-02-12  Ajay Saini  <sainiak@uci.edu>
 
 	* station_dict made ordered to be compatible with Python 2
