--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2018-02-13  Ajay Saini  <sainiak@uci.edu>
+
+	* Resolved bug related to timezone
+
+	* PROMICE- station long names included
+
+	* PROMICE- timezone functionality added
+
+	* GCNet- Added _FillValue for julian_decimal_time
+
+	* PROMICE- lat_lon_GPS calculation changed to reduce run time
+
 2018-02-13  Charlie Zender  <zender@uci.edu>
 
 	* Add pandas to dependency list
