--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2018-02-27  Ajay Saini  <sainiak@uci.edu>
+
+	* Verbose level 3,4,5,6 added
+
+	* Code restructered
+
+	* Work in progress on conda package
+
+	* time calculation common code functionalized
+
+	* default value added for argument dbg_lvl
+
 2018-02-26  Ajay Saini  <sainiak@uci.edu>
 
 	* Resolved error in gcnet_grip having julian_decimal_time value of 367. Generalized for any value greater than 366.
