--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2018-02-28  Ajay Saini  <sainiak@uci.edu>
+
+	* Conda package created locally, still working on it
+
+	* NASA GFSC course completed
+
+	* Work in progress on making plot scripts accept generic files
+
 2018-02-27  Ajay Saini  <sainiak@uci.edu>
 
 	* Verbose level 3,4,5,6 added
