--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2018-03-07  Ajay Saini  <sainiak@uci.edu>
 
+	* Configured `jaws` with Travis-CI
+
+	* Resolved bug in test file
+
+	* Work in progress to refactor and functionalize code, to define more tests
+
+2018-03-07  Ajay Saini  <sainiak@uci.edu>
+
 	* Tests completed to check conversion of files for individual modules
 
 	* Tests made compatible with all platforms and python versions
