--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-03-19  Ajay Saini  <sainiak@uci.edu>
+
+	* Work in progress on analysis scripts
+
 2018-03-16  Ajay Saini  <sainiak@uci.edu>
 
 	* Conda package created and uploaded to anaconda.org
