--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-04-04  Ajay Saini  <sainiak@uci.edu>
+
+	* Add 'day_of_year' variable for PROMICE annual plot analysis
+
+	* Replace jdt with doy(day_of_year) for standard name across all networks
+
+	* Use ylabel from input file
+
+	* AAWS- update get_time_and_sza function to derive values for analysis plots
+
 2018-04-03  Ajay Saini  <sainiak@uci.edu>
 
 	* Appveyor integrate with 'jaws'
